plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'jacoco'
}

jacoco {
	toolVersion = "0.8.9"
}

group = 'com.part2'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	implementation 'org.jsoup:jsoup:1.14.3'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation('io.rest-assured:rest-assured:5.4.0') {
		exclude(group: 'org.codehaus.groovy', module: 'groovy')
	}
	implementation 'com.google.guava:guava:32.1.1-jre'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	// class 계측하지 않고 넘어가기
	jvmArgs += [
			"--add-opens=java.base/sun.util.resources=ALL-UNNAMED",
			"--illegal-access=warn"
	]
	finalizedBy jacocoTestReport
}

// 1. 터미널에서 ./gradlew test 실행
// 2. build/reports/tests/html/index.html > 크롬

// 다른방법
// Gradle > comarket > Tasks > verification > test 클릭
// 2. build/reports/tests/html/index.html > 크롬
jacocoTestReport {
	reports {
		xml.required = true
		html.required = true
	}
	// 오류발생해서 특정 class 제거
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
					'sun/util/resources/cldr/provider/CLDRLocaleDataMetaInfo.class'
			])
		}))
	}
}

// 테스트 커버리지 50% 이상이여야 빌드 가능
//jacocoTestCoverageVerification {
//	violationRules {
//		rule {
//			limit {
//				minimum = 0.5
//			}
//		}
//
//		rule {
//			enabled = false
//			element = 'CLASS'
//			includes = ['org.gradle.*']
//
//			limit {
//				counter = 'LINE'
//				value = 'TOTALCOUNT'
//				maximum = 0.3
//			}
//		}
//	}
//}
